// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessList test Envelope not connected 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-ouia-component-type="process-list"
        data-ouia-safe="false"
      >
        <div
          class="pf-c-toolbar pf-m-toggle-group-container kogito-management-console__state-dropdown-list"
          data-ouia-component-id="OUIA-Generated-Toolbar-1"
          data-ouia-component-type="process-list-toolbar"
          data-ouia-safe="true"
          data-testid="data-toolbar-with-filter"
          id="pf-random-id-0"
        >
          <div
            class="pf-c-toolbar__content"
          >
            <div
              class="pf-c-toolbar__content-section"
            >
              <div
                class="pf-c-toolbar__group pf-m-toggle-group pf-m-show-on-xl"
              >
                <div
                  class="pf-c-toolbar__toggle"
                >
                  <button
                    aria-controls="pf-random-id-0-expandable-content-1"
                    aria-disabled="false"
                    aria-haspopup="false"
                    aria-label="Show Filters"
                    class="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-toolbar__group pf-m-filter-group"
                >
                  <div
                    class="pf-c-toolbar__item pf-m-bulk-select"
                    id="bulk-select"
                  >
                    <div
                      class="pf-c-dropdown"
                      data-ouia-component-id="OUIA-Generated-Dropdown-1"
                      data-ouia-component-type="PF4/Dropdown"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-c-dropdown__toggle pf-m-split-button"
                      >
                        <label
                          class="pf-c-dropdown__toggle-check"
                          for="select-all-checkbox"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Select all"
                            data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-1"
                            data-ouia-component-type="PF4/DropdownToggleCheckbox"
                            data-ouia-safe="true"
                            id="select-all-checkbox"
                            type="checkbox"
                          />
                        </label>
                        <button
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-label="Select"
                          class="pf-c-dropdown__toggle-button"
                          data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                          data-ouia-component-type="PF4/DropdownToggle"
                          data-ouia-safe="true"
                          id="pf-dropdown-toggle-id-2"
                          type="button"
                        >
                          
                          <span
                            class=""
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 320 512"
                              width="1em"
                            >
                              <path
                                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__item kogito-management-console__state-dropdown-list pf-u-mr-sm"
                    id="datatoolbar-filter-status"
                  >
                    <div
                      class="pf-c-select"
                      data-ouia-component-id="OUIA-Generated-Select-checkbox-2"
                      data-ouia-component-type="PF4/Select"
                      data-ouia-safe="true"
                    >
                      <button
                        aria-expanded="false"
                        aria-label="Options menu"
                        aria-labelledby=" pf-select-toggle-id-1"
                        class="pf-c-select__toggle"
                        id="pf-select-toggle-id-1"
                        type="button"
                      >
                        <div
                          class="pf-c-select__toggle-wrapper"
                        >
                          <span
                            class="pf-c-select__toggle-text"
                          >
                            Status
                          </span>
                          <div
                            class="pf-c-select__toggle-badge"
                          >
                            <span
                              class="pf-c-badge pf-m-read"
                            >
                              5
                            </span>
                          </div>
                        </div>
                        <span
                          class="pf-c-select__toggle-arrow"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 320 512"
                            width="1em"
                          >
                            <path
                              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__item"
                  >
                    <div
                      class="pf-c-input-group"
                    >
                      <input
                        aria-invalid="false"
                        aria-label="business key"
                        class="pf-c-form-control"
                        data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                        data-ouia-component-type="PF4/TextInput"
                        data-ouia-safe="true"
                        data-testid="businesskey"
                        id="businessKey"
                        name="businessKey"
                        placeholder="Filter by business key"
                        type="search"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__item"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-primary"
                      data-ouia-component-id="OUIA-Generated-Button-primary-1"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      data-testid="apply-filter-button"
                      type="button"
                    >
                      Apply filter
                    </button>
                  </div>
                </div>
                <div
                  class="pf-c-toolbar__group"
                >
                  <hr
                    class="pf-c-divider pf-m-vertical"
                  />
                  <div
                    class="pf-c-toolbar__group pf-u-ml-md"
                    id="process-management-buttons"
                  >
                    <div
                      class="pf-c-overflow-menu"
                    >
                      <div
                        class="pf-c-overflow-menu__control"
                      >
                         
                        <div
                          class="pf-c-dropdown"
                          data-ouia-component-id="OUIA-Generated-Dropdown-3"
                          data-ouia-component-type="PF4/Dropdown"
                          data-ouia-safe="true"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-label="Actions"
                            class="pf-c-dropdown__toggle pf-m-plain"
                            id="pf-dropdown-toggle-id-3"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 192 512"
                              width="1em"
                            >
                              <path
                                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                              />
                            </svg>
                          </button>
                        </div>
                         
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="pf-c-toolbar__group pf-m-icon-button-group"
              >
                <div
                  class="pf-c-toolbar__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="refresh"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__expandable-content"
              id="pf-random-id-0-expandable-content-1"
            >
              <div
                class="pf-c-toolbar__group"
              />
              <div
                class="pf-c-toolbar__group pf-m-chip-container"
              >
                <div
                  class="pf-c-toolbar__group"
                />
                <div
                  class="pf-c-toolbar__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-link pf-m-inline"
                    data-ouia-component-id="OUIA-Generated-Button-link-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Reset to default
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pf-c-toolbar__content"
          >
            <div
              aria-hidden="true"
              class="pf-c-toolbar__group pf-m-hidden"
              hidden=""
            >
              <div
                class="pf-c-toolbar__item pf-m-chip-group"
              >
                <div
                  aria-labelledby="pf-random-id-3"
                  class="pf-c-chip-group pf-m-category"
                  data-ouia-component-type="PF4/ChipGroup"
                  data-ouia-safe="true"
                  role="group"
                >
                  <div
                    class="pf-c-chip-group__main"
                  >
                    <span
                      class="pf-c-chip-group__label"
                      id="pf-random-id-3"
                    >
                      Status
                    </span>
                    <ul
                      aria-labelledby="pf-random-id-3"
                      class="pf-c-chip-group__list"
                      role="list"
                    >
                      <li
                        class="pf-c-chip-group__list-item"
                      >
                        <div
                          class="pf-c-chip"
                          data-ouia-component-id="OUIA-Generated-Chip-1"
                          data-ouia-component-type="PF4/Chip"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-c-chip__text"
                            id="pf-random-id-4"
                          >
                            ABORTED
                          </span>
                          <button
                            aria-disabled="false"
                            aria-label="close"
                            aria-labelledby="remove_pf-random-id-4 pf-random-id-4"
                            class="pf-c-button pf-m-plain"
                            data-ouia-component-id="close"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            id="remove_pf-random-id-4"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 352 512"
                              width="1em"
                            >
                              <path
                                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              />
                            </svg>
                          </button>
                        </div>
                      </li>
                      <li
                        class="pf-c-chip-group__list-item"
                      >
                        <div
                          class="pf-c-chip"
                          data-ouia-component-id="OUIA-Generated-Chip-2"
                          data-ouia-component-type="PF4/Chip"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-c-chip__text"
                            id="pf-random-id-5"
                          >
                            ACTIVE
                          </span>
                          <button
                            aria-disabled="false"
                            aria-label="close"
                            aria-labelledby="remove_pf-random-id-5 pf-random-id-5"
                            class="pf-c-button pf-m-plain"
                            data-ouia-component-id="close"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            id="remove_pf-random-id-5"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 352 512"
                              width="1em"
                            >
                              <path
                                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              />
                            </svg>
                          </button>
                        </div>
                      </li>
                      <li
                        class="pf-c-chip-group__list-item"
                      >
                        <div
                          class="pf-c-chip"
                          data-ouia-component-id="OUIA-Generated-Chip-3"
                          data-ouia-component-type="PF4/Chip"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-c-chip__text"
                            id="pf-random-id-6"
                          >
                            COMPLETED
                          </span>
                          <button
                            aria-disabled="false"
                            aria-label="close"
                            aria-labelledby="remove_pf-random-id-6 pf-random-id-6"
                            class="pf-c-button pf-m-plain"
                            data-ouia-component-id="close"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            id="remove_pf-random-id-6"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 352 512"
                              width="1em"
                            >
                              <path
                                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              />
                            </svg>
                          </button>
                        </div>
                      </li>
                      <li
                        class="pf-c-chip-group__list-item"
                      >
                        <button
                          class="pf-c-chip pf-m-overflow"
                          data-ouia-component-id="OUIA-Generated-Chip-4"
                          data-ouia-component-type="PF4/OverflowChip"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <span
                            class="pf-c-chip__text"
                          >
                            2 more
                          </span>
                        </button>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__group"
            >
              <div
                class="pf-c-toolbar__item"
              >
                5 filters applied
              </div>
            </div>
            <div
              class="pf-c-toolbar__item"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Reset to default
              </button>
            </div>
          </div>
        </div>
        <table
          aria-label="Process List Table"
          class="pf-c-table pf-m-grid-md"
          data-ouia-component-id="OUIA-Generated-Table-1"
          data-ouia-component-type="process-list-table"
          data-ouia-safe="false"
          data-testid="process-list-table"
          role="grid"
        >
          <thead
            class=""
          >
            <tr
              class=""
              data-ouia-component-id="process-list-table-header"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <th
                class=""
                style="width: 72px;"
              />
              <th
                class=""
                style="width: 86px;"
              />
              <th
                class=""
                scope="col"
              >
                Id
              </th>
              <th
                class=""
                scope="col"
              >
                Status
              </th>
              <th
                class=""
                scope="col"
              >
                Created
              </th>
              <th
                class=""
                scope="col"
              >
                Last update
              </th>
              <th
                class=""
                style="width: 188px;"
              />
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-2"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class=""
                colspan="7"
              >
                <div
                  class="pf-c-empty-state"
                  data-ouia-component-type="kogito-spinner"
                  data-ouia-safe="true"
                >
                  <div
                    class="pf-c-empty-state__content"
                  >
                    <div
                      class="pf-c-empty-state__icon"
                    >
                      <span
                        aria-label="Contents"
                        aria-valuetext="Loading..."
                        class="pf-c-spinner pf-m-xl"
                        role="progressbar"
                      >
                        <span
                          class="pf-c-spinner__clipper"
                        />
                        <span
                          class="pf-c-spinner__lead-ball"
                        />
                        <span
                          class="pf-c-spinner__tail-ball"
                        />
                      </span>
                    </div>
                    <h3
                      class="pf-c-title pf-m-lg"
                      data-ouia-component-id="OUIA-Generated-Title-2"
                      data-ouia-component-type="PF4/Title"
                      data-ouia-safe="true"
                    >
                      Loading process instances...
                    </h3>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div />
  </body>,
  "container": <div>
    <div
      data-ouia-component-type="process-list"
      data-ouia-safe="false"
    >
      <div
        class="pf-c-toolbar pf-m-toggle-group-container kogito-management-console__state-dropdown-list"
        data-ouia-component-id="OUIA-Generated-Toolbar-1"
        data-ouia-component-type="process-list-toolbar"
        data-ouia-safe="true"
        data-testid="data-toolbar-with-filter"
        id="pf-random-id-0"
      >
        <div
          class="pf-c-toolbar__content"
        >
          <div
            class="pf-c-toolbar__content-section"
          >
            <div
              class="pf-c-toolbar__group pf-m-toggle-group pf-m-show-on-xl"
            >
              <div
                class="pf-c-toolbar__toggle"
              >
                <button
                  aria-controls="pf-random-id-0-expandable-content-1"
                  aria-disabled="false"
                  aria-haspopup="false"
                  aria-label="Show Filters"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-toolbar__group pf-m-filter-group"
              >
                <div
                  class="pf-c-toolbar__item pf-m-bulk-select"
                  id="bulk-select"
                >
                  <div
                    class="pf-c-dropdown"
                    data-ouia-component-id="OUIA-Generated-Dropdown-1"
                    data-ouia-component-type="PF4/Dropdown"
                    data-ouia-safe="true"
                  >
                    <div
                      class="pf-c-dropdown__toggle pf-m-split-button"
                    >
                      <label
                        class="pf-c-dropdown__toggle-check"
                        for="select-all-checkbox"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="Select all"
                          data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-1"
                          data-ouia-component-type="PF4/DropdownToggleCheckbox"
                          data-ouia-safe="true"
                          id="select-all-checkbox"
                          type="checkbox"
                        />
                      </label>
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-label="Select"
                        class="pf-c-dropdown__toggle-button"
                        data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                        data-ouia-component-type="PF4/DropdownToggle"
                        data-ouia-safe="true"
                        id="pf-dropdown-toggle-id-2"
                        type="button"
                      >
                        
                        <span
                          class=""
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 320 512"
                            width="1em"
                          >
                            <path
                              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="pf-c-toolbar__item kogito-management-console__state-dropdown-list pf-u-mr-sm"
                  id="datatoolbar-filter-status"
                >
                  <div
                    class="pf-c-select"
                    data-ouia-component-id="OUIA-Generated-Select-checkbox-2"
                    data-ouia-component-type="PF4/Select"
                    data-ouia-safe="true"
                  >
                    <button
                      aria-expanded="false"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-1"
                      class="pf-c-select__toggle"
                      id="pf-select-toggle-id-1"
                      type="button"
                    >
                      <div
                        class="pf-c-select__toggle-wrapper"
                      >
                        <span
                          class="pf-c-select__toggle-text"
                        >
                          Status
                        </span>
                        <div
                          class="pf-c-select__toggle-badge"
                        >
                          <span
                            class="pf-c-badge pf-m-read"
                          >
                            5
                          </span>
                        </div>
                      </div>
                      <span
                        class="pf-c-select__toggle-arrow"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 320 512"
                          width="1em"
                        >
                          <path
                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="pf-c-toolbar__item"
                >
                  <div
                    class="pf-c-input-group"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="business key"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="businesskey"
                      id="businessKey"
                      name="businessKey"
                      placeholder="Filter by business key"
                      type="search"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pf-c-toolbar__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="apply-filter-button"
                    type="button"
                  >
                    Apply filter
                  </button>
                </div>
              </div>
              <div
                class="pf-c-toolbar__group"
              >
                <hr
                  class="pf-c-divider pf-m-vertical"
                />
                <div
                  class="pf-c-toolbar__group pf-u-ml-md"
                  id="process-management-buttons"
                >
                  <div
                    class="pf-c-overflow-menu"
                  >
                    <div
                      class="pf-c-overflow-menu__control"
                    >
                       
                      <div
                        class="pf-c-dropdown"
                        data-ouia-component-id="OUIA-Generated-Dropdown-3"
                        data-ouia-component-type="PF4/Dropdown"
                        data-ouia-safe="true"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-label="Actions"
                          class="pf-c-dropdown__toggle pf-m-plain"
                          id="pf-dropdown-toggle-id-3"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 192 512"
                            width="1em"
                          >
                            <path
                              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                            />
                          </svg>
                        </button>
                      </div>
                       
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__group pf-m-icon-button-group"
            >
              <div
                class="pf-c-toolbar__item"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="refresh"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-c-toolbar__expandable-content"
            id="pf-random-id-0-expandable-content-1"
          >
            <div
              class="pf-c-toolbar__group"
            />
            <div
              class="pf-c-toolbar__group pf-m-chip-container"
            >
              <div
                class="pf-c-toolbar__group"
              />
              <div
                class="pf-c-toolbar__item"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Reset to default
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-c-toolbar__content"
        >
          <div
            aria-hidden="true"
            class="pf-c-toolbar__group pf-m-hidden"
            hidden=""
          >
            <div
              class="pf-c-toolbar__item pf-m-chip-group"
            >
              <div
                aria-labelledby="pf-random-id-3"
                class="pf-c-chip-group pf-m-category"
                data-ouia-component-type="PF4/ChipGroup"
                data-ouia-safe="true"
                role="group"
              >
                <div
                  class="pf-c-chip-group__main"
                >
                  <span
                    class="pf-c-chip-group__label"
                    id="pf-random-id-3"
                  >
                    Status
                  </span>
                  <ul
                    aria-labelledby="pf-random-id-3"
                    class="pf-c-chip-group__list"
                    role="list"
                  >
                    <li
                      class="pf-c-chip-group__list-item"
                    >
                      <div
                        class="pf-c-chip"
                        data-ouia-component-id="OUIA-Generated-Chip-1"
                        data-ouia-component-type="PF4/Chip"
                        data-ouia-safe="true"
                      >
                        <span
                          class="pf-c-chip__text"
                          id="pf-random-id-4"
                        >
                          ABORTED
                        </span>
                        <button
                          aria-disabled="false"
                          aria-label="close"
                          aria-labelledby="remove_pf-random-id-4 pf-random-id-4"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="close"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          id="remove_pf-random-id-4"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                        </button>
                      </div>
                    </li>
                    <li
                      class="pf-c-chip-group__list-item"
                    >
                      <div
                        class="pf-c-chip"
                        data-ouia-component-id="OUIA-Generated-Chip-2"
                        data-ouia-component-type="PF4/Chip"
                        data-ouia-safe="true"
                      >
                        <span
                          class="pf-c-chip__text"
                          id="pf-random-id-5"
                        >
                          ACTIVE
                        </span>
                        <button
                          aria-disabled="false"
                          aria-label="close"
                          aria-labelledby="remove_pf-random-id-5 pf-random-id-5"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="close"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          id="remove_pf-random-id-5"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                        </button>
                      </div>
                    </li>
                    <li
                      class="pf-c-chip-group__list-item"
                    >
                      <div
                        class="pf-c-chip"
                        data-ouia-component-id="OUIA-Generated-Chip-3"
                        data-ouia-component-type="PF4/Chip"
                        data-ouia-safe="true"
                      >
                        <span
                          class="pf-c-chip__text"
                          id="pf-random-id-6"
                        >
                          COMPLETED
                        </span>
                        <button
                          aria-disabled="false"
                          aria-label="close"
                          aria-labelledby="remove_pf-random-id-6 pf-random-id-6"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="close"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          id="remove_pf-random-id-6"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                        </button>
                      </div>
                    </li>
                    <li
                      class="pf-c-chip-group__list-item"
                    >
                      <button
                        class="pf-c-chip pf-m-overflow"
                        data-ouia-component-id="OUIA-Generated-Chip-4"
                        data-ouia-component-type="PF4/OverflowChip"
                        data-ouia-safe="true"
                        type="button"
                      >
                        <span
                          class="pf-c-chip__text"
                        >
                          2 more
                        </span>
                      </button>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pf-c-toolbar__group"
          >
            <div
              class="pf-c-toolbar__item"
            >
              5 filters applied
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              Reset to default
            </button>
          </div>
        </div>
      </div>
      <table
        aria-label="Process List Table"
        class="pf-c-table pf-m-grid-md"
        data-ouia-component-id="OUIA-Generated-Table-1"
        data-ouia-component-type="process-list-table"
        data-ouia-safe="false"
        data-testid="process-list-table"
        role="grid"
      >
        <thead
          class=""
        >
          <tr
            class=""
            data-ouia-component-id="process-list-table-header"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <th
              class=""
              style="width: 72px;"
            />
            <th
              class=""
              style="width: 86px;"
            />
            <th
              class=""
              scope="col"
            >
              Id
            </th>
            <th
              class=""
              scope="col"
            >
              Status
            </th>
            <th
              class=""
              scope="col"
            >
              Created
            </th>
            <th
              class=""
              scope="col"
            >
              Last update
            </th>
            <th
              class=""
              style="width: 188px;"
            />
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-2"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class=""
              colspan="7"
            >
              <div
                class="pf-c-empty-state"
                data-ouia-component-type="kogito-spinner"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-empty-state__content"
                >
                  <div
                    class="pf-c-empty-state__icon"
                  >
                    <span
                      aria-label="Contents"
                      aria-valuetext="Loading..."
                      class="pf-c-spinner pf-m-xl"
                      role="progressbar"
                    >
                      <span
                        class="pf-c-spinner__clipper"
                      />
                      <span
                        class="pf-c-spinner__lead-ball"
                      />
                      <span
                        class="pf-c-spinner__tail-ball"
                      />
                    </span>
                  </div>
                  <h3
                    class="pf-c-title pf-m-lg"
                    data-ouia-component-id="OUIA-Generated-Title-2"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe="true"
                  >
                    Loading process instances...
                  </h3>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProcessList test do reset 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-ouia-component-type="process-list"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-toolbar pf-m-toggle-group-container kogito-management-console__state-dropdown-list"
          data-ouia-component-id="OUIA-Generated-Toolbar-7"
          data-ouia-component-type="process-list-toolbar"
          data-ouia-safe="true"
          data-testid="data-toolbar-with-filter"
          id="pf-random-id-48"
        >
          <div
            class="pf-c-toolbar__content"
          >
            <div
              class="pf-c-toolbar__content-section"
            >
              <div
                class="pf-c-toolbar__group pf-m-toggle-group pf-m-show-on-xl"
              >
                <div
                  class="pf-c-toolbar__toggle"
                >
                  <button
                    aria-controls="pf-random-id-48-expandable-content-54"
                    aria-disabled="false"
                    aria-haspopup="false"
                    aria-label="Show Filters"
                    class="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-52"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-c-toolbar__group pf-m-filter-group"
                >
                  <div
                    class="pf-c-toolbar__item pf-m-bulk-select"
                    id="bulk-select"
                  >
                    <div
                      class="pf-c-dropdown"
                      data-ouia-component-id="OUIA-Generated-Dropdown-40"
                      data-ouia-component-type="PF4/Dropdown"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-c-dropdown__toggle pf-m-split-button pf-m-disabled"
                      >
                        <label
                          class="pf-c-dropdown__toggle-check"
                          for="select-all-checkbox"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Select all"
                            data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-7"
                            data-ouia-component-type="PF4/DropdownToggleCheckbox"
                            data-ouia-safe="true"
                            disabled=""
                            id="select-all-checkbox"
                            type="checkbox"
                          />
                        </label>
                        <button
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-label="Select"
                          class="pf-c-dropdown__toggle-button"
                          data-ouia-component-id="OUIA-Generated-DropdownToggle-13"
                          data-ouia-component-type="PF4/DropdownToggle"
                          data-ouia-safe="true"
                          disabled=""
                          id="pf-dropdown-toggle-id-107"
                          type="button"
                        >
                          
                          <span
                            class=""
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 320 512"
                              width="1em"
                            >
                              <path
                                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__item kogito-management-console__state-dropdown-list pf-u-mr-sm"
                    id="datatoolbar-filter-status"
                  >
                    <div
                      class="pf-c-select"
                      data-ouia-component-id="OUIA-Generated-Select-checkbox-14"
                      data-ouia-component-type="PF4/Select"
                      data-ouia-safe="true"
                    >
                      <button
                        aria-expanded="false"
                        aria-label="Options menu"
                        aria-labelledby=" pf-select-toggle-id-54"
                        class="pf-c-select__toggle"
                        id="pf-select-toggle-id-54"
                        type="button"
                      >
                        <div
                          class="pf-c-select__toggle-wrapper"
                        >
                          <span
                            class="pf-c-select__toggle-text"
                          >
                            Status
                          </span>
                        </div>
                        <span
                          class="pf-c-select__toggle-arrow"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 320 512"
                            width="1em"
                          >
                            <path
                              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__item"
                  >
                    <div
                      class="pf-c-input-group"
                    >
                      <input
                        aria-invalid="false"
                        aria-label="business key"
                        class="pf-c-form-control"
                        data-ouia-component-id="OUIA-Generated-TextInputBase-14"
                        data-ouia-component-type="PF4/TextInput"
                        data-ouia-safe="true"
                        data-testid="businesskey"
                        id="businessKey"
                        name="businessKey"
                        placeholder="Filter by business key"
                        type="search"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="pf-c-toolbar__item"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-primary"
                      data-ouia-component-id="OUIA-Generated-Button-primary-7"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      data-testid="apply-filter-button"
                      type="button"
                    >
                      Apply filter
                    </button>
                  </div>
                </div>
                <div
                  class="pf-c-toolbar__group"
                >
                  <hr
                    class="pf-c-divider pf-m-vertical"
                  />
                  <div
                    class="pf-c-toolbar__group pf-u-ml-md"
                    id="process-management-buttons"
                  >
                    <div
                      class="pf-c-overflow-menu"
                    >
                      <div
                        class="pf-c-overflow-menu__control"
                      >
                         
                        <div
                          class="pf-c-dropdown"
                          data-ouia-component-id="OUIA-Generated-Dropdown-41"
                          data-ouia-component-type="PF4/Dropdown"
                          data-ouia-safe="true"
                        >
                          <button
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-label="Actions"
                            class="pf-c-dropdown__toggle pf-m-plain"
                            id="pf-dropdown-toggle-id-108"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 192 512"
                              width="1em"
                            >
                              <path
                                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                              />
                            </svg>
                          </button>
                        </div>
                         
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="pf-c-toolbar__group pf-m-icon-button-group"
              >
                <div
                  class="pf-c-toolbar__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-plain"
                    data-ouia-component-id="OUIA-Generated-Button-plain-53"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="refresh"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__expandable-content"
              id="pf-random-id-48-expandable-content-54"
            >
              <div
                class="pf-c-toolbar__group"
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__content pf-m-hidden"
            hidden=""
          >
            <div
              aria-hidden="true"
              class="pf-c-toolbar__group pf-m-hidden"
              hidden=""
            />
          </div>
        </div>
        <div
          class="kogito-process-list__emptyState-card"
        >
          <div
            class="pf-l-bullseye"
            data-ouia-component-type="kogito-empty-state"
            data-ouia-safe="true"
          >
            <div
              class="pf-c-empty-state"
            >
              <div
                class="pf-c-empty-state__content"
              >
                <svg
                  aria-hidden="true"
                  class="pf-c-empty-state__icon"
                  fill="var(--pf-global--warning-color--100)"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
                <h5
                  class="pf-c-title pf-m-lg"
                  data-ouia-component-id="OUIA-Generated-Title-17"
                  data-ouia-component-type="PF4/Title"
                  data-ouia-safe="true"
                >
                  No filters applied.
                </h5>
                <div
                  class="pf-c-empty-state__body"
                >
                  Try applying at least one filter to see results
                </div>
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-28"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Reset to default
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </body>,
  "container": <div>
    <div
      data-ouia-component-type="process-list"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-toolbar pf-m-toggle-group-container kogito-management-console__state-dropdown-list"
        data-ouia-component-id="OUIA-Generated-Toolbar-7"
        data-ouia-component-type="process-list-toolbar"
        data-ouia-safe="true"
        data-testid="data-toolbar-with-filter"
        id="pf-random-id-48"
      >
        <div
          class="pf-c-toolbar__content"
        >
          <div
            class="pf-c-toolbar__content-section"
          >
            <div
              class="pf-c-toolbar__group pf-m-toggle-group pf-m-show-on-xl"
            >
              <div
                class="pf-c-toolbar__toggle"
              >
                <button
                  aria-controls="pf-random-id-48-expandable-content-54"
                  aria-disabled="false"
                  aria-haspopup="false"
                  aria-label="Show Filters"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-52"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-toolbar__group pf-m-filter-group"
              >
                <div
                  class="pf-c-toolbar__item pf-m-bulk-select"
                  id="bulk-select"
                >
                  <div
                    class="pf-c-dropdown"
                    data-ouia-component-id="OUIA-Generated-Dropdown-40"
                    data-ouia-component-type="PF4/Dropdown"
                    data-ouia-safe="true"
                  >
                    <div
                      class="pf-c-dropdown__toggle pf-m-split-button pf-m-disabled"
                    >
                      <label
                        class="pf-c-dropdown__toggle-check"
                        for="select-all-checkbox"
                      >
                        <input
                          aria-invalid="false"
                          aria-label="Select all"
                          data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-7"
                          data-ouia-component-type="PF4/DropdownToggleCheckbox"
                          data-ouia-safe="true"
                          disabled=""
                          id="select-all-checkbox"
                          type="checkbox"
                        />
                      </label>
                      <button
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-label="Select"
                        class="pf-c-dropdown__toggle-button"
                        data-ouia-component-id="OUIA-Generated-DropdownToggle-13"
                        data-ouia-component-type="PF4/DropdownToggle"
                        data-ouia-safe="true"
                        disabled=""
                        id="pf-dropdown-toggle-id-107"
                        type="button"
                      >
                        
                        <span
                          class=""
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 320 512"
                            width="1em"
                          >
                            <path
                              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="pf-c-toolbar__item kogito-management-console__state-dropdown-list pf-u-mr-sm"
                  id="datatoolbar-filter-status"
                >
                  <div
                    class="pf-c-select"
                    data-ouia-component-id="OUIA-Generated-Select-checkbox-14"
                    data-ouia-component-type="PF4/Select"
                    data-ouia-safe="true"
                  >
                    <button
                      aria-expanded="false"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-54"
                      class="pf-c-select__toggle"
                      id="pf-select-toggle-id-54"
                      type="button"
                    >
                      <div
                        class="pf-c-select__toggle-wrapper"
                      >
                        <span
                          class="pf-c-select__toggle-text"
                        >
                          Status
                        </span>
                      </div>
                      <span
                        class="pf-c-select__toggle-arrow"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 320 512"
                          width="1em"
                        >
                          <path
                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="pf-c-toolbar__item"
                >
                  <div
                    class="pf-c-input-group"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="business key"
                      class="pf-c-form-control"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-14"
                      data-ouia-component-type="PF4/TextInput"
                      data-ouia-safe="true"
                      data-testid="businesskey"
                      id="businessKey"
                      name="businessKey"
                      placeholder="Filter by business key"
                      type="search"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="pf-c-toolbar__item"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-7"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="apply-filter-button"
                    type="button"
                  >
                    Apply filter
                  </button>
                </div>
              </div>
              <div
                class="pf-c-toolbar__group"
              >
                <hr
                  class="pf-c-divider pf-m-vertical"
                />
                <div
                  class="pf-c-toolbar__group pf-u-ml-md"
                  id="process-management-buttons"
                >
                  <div
                    class="pf-c-overflow-menu"
                  >
                    <div
                      class="pf-c-overflow-menu__control"
                    >
                       
                      <div
                        class="pf-c-dropdown"
                        data-ouia-component-id="OUIA-Generated-Dropdown-41"
                        data-ouia-component-type="PF4/Dropdown"
                        data-ouia-safe="true"
                      >
                        <button
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-label="Actions"
                          class="pf-c-dropdown__toggle pf-m-plain"
                          id="pf-dropdown-toggle-id-108"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 192 512"
                            width="1em"
                          >
                            <path
                              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                            />
                          </svg>
                        </button>
                      </div>
                       
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__group pf-m-icon-button-group"
            >
              <div
                class="pf-c-toolbar__item"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-53"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="refresh"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-c-toolbar__expandable-content"
            id="pf-random-id-48-expandable-content-54"
          >
            <div
              class="pf-c-toolbar__group"
            />
          </div>
        </div>
        <div
          class="pf-c-toolbar__content pf-m-hidden"
          hidden=""
        >
          <div
            aria-hidden="true"
            class="pf-c-toolbar__group pf-m-hidden"
            hidden=""
          />
        </div>
      </div>
      <div
        class="kogito-process-list__emptyState-card"
      >
        <div
          class="pf-l-bullseye"
          data-ouia-component-type="kogito-empty-state"
          data-ouia-safe="true"
        >
          <div
            class="pf-c-empty-state"
          >
            <div
              class="pf-c-empty-state__content"
            >
              <svg
                aria-hidden="true"
                class="pf-c-empty-state__icon"
                fill="var(--pf-global--warning-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
              <h5
                class="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-17"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                No filters applied.
              </h5>
              <div
                class="pf-c-empty-state__body"
              >
                Try applying at least one filter to see results
              </div>
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link"
                data-ouia-component-id="OUIA-Generated-Button-link-28"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Reset to default
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProcessList test error page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="pf-c-page__main-section pf-m-light"
      >
        <div
          class="pf-l-bullseye"
          data-ouia-component-type="server-errors"
          data-ouia-safe="true"
        >
          <div
            class="pf-c-empty-state"
          >
            <div
              class="pf-c-empty-state__content"
            >
              <svg
                aria-hidden="true"
                class="pf-c-empty-state__icon"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
              <h1
                class="pf-c-title pf-m-4xl"
                data-ouia-component-id="OUIA-Generated-Title-7"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                Error fetching data
              </h1>
              <div
                class="pf-c-empty-state__body"
                data-testid="empty-state-body"
              >
                An error occurred while accessing data.
                 
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-9"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="display-error"
                  id="display-error"
                  type="button"
                >
                  See more details
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="pf-c-page__main-section pf-m-light"
    >
      <div
        class="pf-l-bullseye"
        data-ouia-component-type="server-errors"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-empty-state"
        >
          <div
            class="pf-c-empty-state__content"
          >
            <svg
              aria-hidden="true"
              class="pf-c-empty-state__icon"
              fill="var(--pf-global--danger-color--100)"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
            <h1
              class="pf-c-title pf-m-4xl"
              data-ouia-component-id="OUIA-Generated-Title-7"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Error fetching data
            </h1>
            <div
              class="pf-c-empty-state__body"
              data-testid="empty-state-body"
            >
              An error occurred while accessing data.
               
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-9"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="display-error"
                id="display-error"
                type="button"
              >
                See more details
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
